[package]
name = "retrorecord"
version = "0.1.0"
authors = ["Ricky Miller <ricky.miller@gmail.com>"]
edition = "2021"

[dependencies]
notify = "4.0.0"
egg-mode = { version = "0.13", features = ["hyper-rustls"], default-features = false }
tokio-core = "0.1.11"
rand = "0.3"
mime = "0.3.5"
dialoguer = "0.8.0"
regex = "0.2"
clap = "2.31.1"
